--- a/randomize_dynamic.html
+++ b/randomize_dynamic.html
@@ -6,7 +6,7 @@
         async function redirectRandomly() {
             try {
                 // Fetch the external URLs file from GitHub
-                const response = await fetch('https://zukowskie.github.io/InterestingReads/URLs.html');
+                const response = await fetch('https://raw.githubusercontent.com/zukowskie/InterestingReads/URLs.html');
                 
                 // Ensure the fetch was successful
                 if (!response.ok) {
